fix bug where appt notes were not showing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
   width: 50px;
 }
 
-.material-icons {
+.form-icon {
   font-size: 30px;
 }
 
